CHANGES IN VERSION 1.11.5
------------------------
 o switch from parallel to BiocParallel <2017-07-07, Thu>
 o [, head and tail methods for enrichResult and gseaResult <2016-07-06, Wed>
 o change according to GOSemSim <2016-07-05, Tue>
 
CHANGES IN VERSION 1.11.4
------------------------
 o 'title' parameter for gseaplot <2016-07-04, Mon>
   + contributed by https://github.com/pedrostrusso
   + https://github.com/GuangchuangYu/DOSE/pull/13
 o 'by' parameter in GSEA_internal, by default by = 'fgsea' <2016-07-04, Mon>
   + by = 'fgsea', use GSEA algorithm implemented in fgsea
   + by = 'DOSE', use GSEA algorithm implemented in DOSE 
 o leading edge analysis for GSEA <2016-07-04, Mon>
 
CHANGES IN VERSION 1.11.3
------------------------
 o output igraph object in cnetplot <2016-06-21, Tue>
 o upsetplot generics <2016-06-14, Tue>
 o [[ methods for enrichResult and gseaResult for accessing gene set <2016-06-14, Tue> 
 
CHANGES IN VERSION 1.11.2
------------------------
 o use byte compiler <2016-05-18, Wed>
 o https://github.com/Bioconductor-mirror/DOSE/commit/6c508c6a6816f465bb372f30f4ab99c839d81767

CHANGES IN VERSION 1.11.1
------------------------
 o https://github.com/Bioconductor-mirror/DOSE/commit/7e87d01e671ce1b5fbe974c06b796b1a2970f11c
 
CHANGES IN VERSION 1.10.0
------------------------
 o BioC 3.3 released <2016-05-05, Thu>

CHANGES IN VERSION 2.9.7
------------------------
 o barplot accepts x and colorBy parameters as in dotplot <2016-04-13, Wed>
 o gsfilter function for restricting result with minimal and maximal gene set size <2016-03-31, Thu>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/46
 
CHANGES IN VERSION 2.9.6
------------------------
 o add maxGSSize parameter for hypergeometric test <2016-03-09, Wed>
 o add maxGSSize parameter in GSEA analysis. <2016-03-09, Wed>
   + Default of 500 is fairly standard for GSEA analysis.