@@ -32,6 +32,7 @@ export(theme_dose)
 export(upsetplot)
 exportClasses(enrichResult)
 exportClasses(gseaResult)
+exportMethods("$")
 exportMethods("[")
 exportMethods("[[")
 exportMethods(cnetplot)
